--- a/static/styles.css
+++ b/static/styles.css
@@ -15041,3 +15041,12 @@ body.dark {
     margin-left: 10px;
     /* Adjust this value to get the amount of space you want */
 }
+
+body.dark .language-plaintext,
+body.dark .language-plaintext pre,
+body.dark .language-plaintext code {
+    background-color: #333;
+    /* dark gray */
+    color: #f5f5f5;
+    /* light text */
+}
