--- a/static/styles.css
+++ b/static/styles.css
@@ -14954,6 +14954,10 @@ aside button[data-bs-toggle=collapse]:not(.collapsed) {
 
 /*# sourceMappingURL=page.css.map */
 
+
+/*# custom */
+
+
 body {
     font-family: sans-serif;
     background-color: #fff;
@@ -14963,7 +14967,27 @@ body {
 body.dark {
     background-color: #333;
     color: #fff;
+}
 
+a {
+    color: black;
+}
+
+body.dark a {
+    color: white;
+}
+
+#calendar td,
+#calendar th {
+    color: white;
+    padding: 3px;
+    font-size: 15px;
+    text-align: center;
+}
+
+.today {
+    background-color: white !important;
+    color: black !important;
 }
 
 body.dark #newsBox {
@@ -14982,39 +15006,29 @@ body.dark .news-button:hover {
     border-color: #333 !important;
 }
 
-
-.today {
-    background-color: white !important;
-    color: black !important;
-}
-
-#calendar td,
-#calendar th {
+.news-button {
+    background-color: black;
+    border: 2px solid white;
     color: white;
-    padding: 3px;
-    font-size: 15px;
+    padding: 10px 20px;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 10px 2px;
+    cursor: pointer;
+    transition-duration: 0.4s;
 }
 
-@media (min-width: 992px) {
-    aside.col-lg {
-        position: sticky;
-        top: 0;
-        height: 100vh;
-        overflow-y: auto;
-    }
+.news-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
-
 
 .menu-button {
     color: white !important;
     background-color: black !important;
-}
-
-.centered-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .theme-button {
@@ -15048,53 +15062,33 @@ body.dark .news-button:hover {
     background-color: #333;
 }
 
+#theme-toggler {
+    margin-left: 10px;
+}
+
 .top-bar {
     display: flex;
     padding-bottom: 20px;
-}
-
-#theme-toggler {
-    margin-left: 10px;
-    /* Adjust this value to get the amount of space you want */
 }
 
 body.dark .language-plaintext,
 body.dark .language-plaintext pre,
 body.dark .language-plaintext code {
     background-color: #333;
-    /* dark gray */
     color: #f5f5f5;
-    /* light text */
 }
 
-.news-button {
-    background-color: black;
-    border: 2px solid white;
-    /* Added a border */
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 10px 2px;
-    cursor: pointer;
-    transition-duration: 0.4s;
+.centered-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.news-button:hover {
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-    /* Change border color on hover */
-}
-
-a {
-    color: black;
-    /* Default color in light mode */
-}
-
-body.dark a {
-    color: white;
-    /* Color in dark mode */
+@media (min-width: 992px) {
+    aside.col-lg {
+        position: sticky;
+        top: 0;
+        height: 100vh;
+        overflow-y: auto;
+    }
 }
