Create and update HTML strtcures

--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta property="og:description" content="KORIN's homepage">
+    <meta property="og:description" content="KORIN's Homepage">
     <meta property="og:title" content="Homepage - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
@@ -23,7 +23,7 @@
                     <h1><a href="">KORIN</h1>
 
                     <div class="top-bar">
-                        <span><a href="" class="language-link">日本語</a></span>
+                        <span><a href="../ja/index.html" class="language-link">日本語</a></span>
 
                         <button id="theme-toggler" class="theme-button">
                             <i id="theme-icon" class="fas fa-moon"></i>
@@ -71,9 +71,9 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="#">Gallery</a></li>
+                                href="../common/gallery.html">Gallery</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="#">Projects</a></li>
+                                href="../common/projects.html">Projects</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
