--- a/static/styles.css
+++ b/static/styles.css
@@ -15051,11 +15051,15 @@ body.dark .news-button:hover {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.5s;
     padding: 0;
     margin: 0;
     outline: none;
     overflow: hidden;
+}
+
+.theme-button.flipped {
+    transform: rotateY(180deg);
 }
 
 .theme-button:hover {
