--- a/static/styles.css
+++ b/static/styles.css
@@ -15084,6 +15084,10 @@ body.dark .news-button:hover {
     padding-bottom: 20px;
 }
 
+.language-link:hover {
+    font-weight: bold;
+}
+
 body.dark .language-plaintext,
 body.dark .language-plaintext pre,
 body.dark .language-plaintext code {
