--- a/static/styles.css
+++ b/static/styles.css
@@ -14958,6 +14958,7 @@ aside button[data-bs-toggle=collapse]:not(.collapsed) {
 /*# custom */
 
 
+/* General Styles */
 body {
     font-family: sans-serif;
     background-color: #fff;
@@ -14978,6 +14979,27 @@ body.dark a {
     color: white;
 }
 
+body.dark .custom-button {
+    background-color: #333 !important;
+    color: white !important;
+    border-color: white !important;
+}
+
+body.dark .custom-button:hover {
+    background-color: white !important;
+    color: #333 !important;
+    border-color: #333 !important;
+}
+
+body.dark .language-plaintext,
+body.dark .language-plaintext pre,
+body.dark .language-plaintext code {
+    background-color: #333 !important;
+    color: #f5f5f5;
+    transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+/* Calendar Styles */
 #calendar td,
 #calendar th {
     color: white;
@@ -14992,6 +15014,7 @@ body.dark a {
     font-weight: bold;
 }
 
+/* News Box Styles */
 #newsBox,
 body.dark #newsBox {
     resize: vertical;
@@ -15004,19 +15027,8 @@ body.dark #newsBox {
     border-color: white !important;
 }
 
-body.dark .news-button {
-    background-color: #333 !important;
-    color: white !important;
-    border-color: white !important;
-}
-
-body.dark .news-button:hover {
-    background-color: white !important;
-    color: #333 !important;
-    border-color: #333 !important;
-}
-
-.news-button {
+/* Button Styles */
+.custom-button {
     background-color: black;
     border: 2px solid white;
     color: white;
@@ -15030,7 +15042,7 @@ body.dark .news-button:hover {
     transition-duration: 0.4s;
 }
 
-.news-button:hover {
+.custom-button:hover {
     background-color: white;
     color: black;
     border: 2px solid black;
@@ -15071,27 +15083,21 @@ body.dark .news-button:hover {
     background-color: rgba(51, 51, 51, 0.6);
 }
 
-#theme-toggler {
-    margin-left: 10px;
-}
-
+/* Top Bar Styles */
 .top-bar {
     display: flex;
     padding-bottom: 20px;
+}
+
+#theme-toggler {
+    margin-left: 10px;
 }
 
 .language-link:hover {
     font-weight: bold;
 }
 
-body.dark .language-plaintext,
-body.dark .language-plaintext pre,
-body.dark .language-plaintext code {
-    background-color: #333 !important;
-    color: #f5f5f5;
-    transition: background-color 0.2s ease, color 0.2s ease;
-}
-
+/* Language Plaintext Styles */
 .language-plaintext,
 .language-plaintext pre,
 .language-plaintext code {
@@ -15100,13 +15106,14 @@ body.dark .language-plaintext code {
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-
+/* Centered Container Styles */
 .centered-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* Media Queries */
 @media (min-width: 992px) {
     aside.col-lg {
         position: sticky;
@@ -15116,6 +15123,7 @@ body.dark .language-plaintext code {
     }
 }
 
+/* Sidebar Toggler Styles */
 #sidebar-toggler {
     width: 30px;
     height: 30px;
@@ -15127,6 +15135,15 @@ body.dark .language-plaintext code {
     height: 30px;
 }
 
+/* Command Styles */
 .command:before {
     content: ">>> ";
+}
+
+/* Back to Top Button Styles */
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
 }
