--- a/static/styles.css
+++ b/static/styles.css
@@ -15141,9 +15141,18 @@ body.dark #newsBox {
 }
 
 /* Back to Top Button Styles */
+/* Back to Top Button Styles */
 .back-to-top {
     position: fixed;
     bottom: 20px;
     right: 20px;
     display: none;
+}
+
+body.dark .back-to-top {
+    color: white;
+}
+
+.back-to-top.show {
+    display: block;
 }
