--- a/static/styles.css
+++ b/static/styles.css
@@ -15076,6 +15076,10 @@ body.dark #newsBox {
 }
 
 .theme-button.flipped {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
