--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -1,23 +1,187 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en-us">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <meta property="og:description" content="KORIN's Homepage">
+    <meta property="og:image" content="static/web_screenshot.png">
     <meta property="og:title" content="Homepage - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-
-    <title>ホームページ - コリン</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Homepage - KORIN</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-lg">
+                <header>
+                    <h1><a href="">コリン</a></h1>
 
-    <h1>準備中</h1>
+                    <div class="top-bar">
+                        <span><a href="../../index.html" class="language-link"><strong>ENGLISH</strong></a></span>
+
+                        <button id="theme-toggler" class="theme-button">
+                            <i id="theme-icon" class="fas fa-moon"></i>
+                        </button>
+                    </div>
+
+                    <ul style="list-style-type: none; padding: 0;" class="social-links">
+                        <li>
+                            <a class="mr-1" href="https://github.com/KORINZ">
+                                <i aria-hidden="true" class="fab fa-github" title="GitHub"></i>
+                                GitHub
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://www.linkedin.com/in/colin-z/">
+                                <i aria-hidden="true" class="fab fa-linkedin" title="LinkedIn"></i>
+                                LinkedIn
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://stackoverflow.com/users/19939086/%e3%82%b3%e3%83%aa%e3%83%b3">
+                                <i aria-hidden="true" class="fab fa-stack-overflow" title="Stack Overflow"></i>
+                                Stack Overflow
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://twitter.com/japan_korin">
+                                <i aria-hidden="true" class="fab fa-twitter" title="Twitter"></i>
+                                Twitter
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://www.strava.com/athletes/107165964">
+                                <i aria-hidden="true" class="fab fa-strava" title="Strava"></i>
+                                Strava
+                            </a>
+                        </li>
+                    </ul>
+                </header>
+
+                <button id="sidebar-toggler" class="btn btn-sm collapsed d-lg-none menu-button"
+                    data-bs-toggle="collapse" data-bs-target="#nav">
+                    <i id="sidebar-icon" class="fas fa-bars"></i>
+                </button>
+
+                <nav class="collapse d-lg-block" id="nav">
+                    <hr>
+                    <ul class="fa-ul">
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="templates/common/gallery.html">Gallery</a></li>
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="templates/common/projects.html">Projects</a></li>
+                    </ul>
+                    <hr>
+                    <div class="centered-container">
+                        <div id="calendar"></div>
+                    </div>
+                    <hr>
+                    <footer>© 2023 KORIN</footer>
+                </nav>
+
+            </aside>
+
+            <main class="col-lg">
+
+                <h2>私について</h2>
+                <p>大阪大学基礎工学研究科の2年生です。カリフォルニア大学サンタバーバラ校を卒業した後、日本の大学院で夢を追求することを決めました。
+                </p>
+                <p>現在、OpenFOAMやPythonを使って3Dバイオプリンティングに関する流体せん断応力のシミュレーションを行っています。また、日本語と敬語も勉強しています。
+                </p>
+                <p>私の研究興味は相変化熱伝達、光応答性界面活性剤、計算流体力学、そして3Dバイオプリンティングです。また、現在TypeScript、HTML/CSS、そしてPythonを使った機械学習を学んで練習しています。
+                </p>
+                <p>よろしくお願いします。</p>
+
+                <h2>プロジェクト例</h2>
+                <div id="newsBox"
+                    style="width: 100%; height: 350px; overflow: auto; border: 1px solid black; padding: 10px;">
+                    <h2 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;">NHK NEWS WEB EASY スクレイパー
+                    </h2>
+                    <p style=" font-size: 1rem;">このツールは、NHK NEWS WEB
+                        EASYのウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。</p>
+                    <p style="font-size: 1rem;">始めるには、'作成'ボタンをクリックするだけです。また、'コピー'ボタンを使って内容をクリップボードにコピーすることもできます。</p>
+                    <p style="font-size: 1rem;">
+                        なお、ニュースの更新は平日に2回、おおよそ午後12時と午後5時に行われます。これらの更新期間中は、ニュース取得機能が正しく動作しない場合があります。また、'Fetch News'機能は、NHK
+                        NEWS WEB EASYウェブサイトの最新のヘッドライン4つからランダムに記事を抽出することにご注意ください。
+                    </p>
+                </div>
+
+                <button id="fetch-news-btn" class="custom-button">作成</button>
+                <button id="copy-news-btn" class="custom-button">コピー</button>
+                <span id="copy-message"></span>
+                <p style="font-size: 0.8rem;">
+                    また、このツールのPythonで開発された使いやすいグラフィカルインターフェース版もご覧いただけます。この<a
+                        href="https://github.com/KORINZ/nhk-news-scraper-gui">GitHubリポジトリ</a>でチェックしてみてください。</a>
+                    <br>
+                    すべてのニュースコンテンツは、NHK（日本放送協会）によって著作権が保護されています。
+                    <br>
+                    「NEWS WEB EASY」では、三省堂の『例解小学国語辞典第5版』を使っています。
+                    辞書の著作権は、辞書を作った株式会社三省堂にあります。
+                </p>
+
+                <h2>連絡先</h2>
+                <p>ASCIIから文字列への変換を利用した以下のPythonスクリプトを実行することで、私に連絡を取ることができます：</p>
+                <div class="language-plaintext highlighter-rouge">
+                    <div class="highlight">
+                        <pre
+                            class="highlight"><code class="command">"".join(chr(i) for i in (107, 111, 114, 105, 110, 46, 106, 97, 112, 97, 110, 64, 103, 109, 97, 105, 108, 46, 99, 111, 109))</code></pre>
+                    </div>
+                </div>
+
+                <h2>研究</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nulla nobis quod dicta in quidem
+                    minus dolorem dignissimos provident error necessitatibus suscipit quae tenetur aut, ad adipisci.
+                    Nesciunt, odit fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptas
+                    nihil deleniti porro debitis ea vero exercitationem non minus nemo voluptatum ut iusto eum quasi
+                    saepe, facilis fugiat, culpa vitae.</p>
+                <figure>
+                    <p align="center">
+                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350"
+                            loading="lazy">
+
+                    </p>
+                    <figcaption align="center"><strong>Figure 1.</strong> Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit.
+                        Sapiente quisquam, repellat quia itaque rerum eius illo. Consequatur, ea! Aut reprehenderit
+                        dolorum reiciendis nobis ipsum eum ducimus perspiciatis rem illo provident.</figcaption>
+                </figure>
+
+                <h2>オンラインコース</h2>
+                <ul>
+                    <li><a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0">CS50x:
+                            Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a
+                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
+                            for Machine Learning: Linear Algebra
+                            <i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
+                            Github Bootcamp
+                            <i class="fas fa-external-link-alt"></i></a></li>
+                </ul>
+
+                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
+
+            </main>
+        </div>
+    </div>
+
+    <script src="../../js/change-theme.js"></script>
+    <script src="../../js/theme-toggle.js"></script>
+    <script src="../../js/sidebar-toggle.js"></script>
+    <script src="../../js/calender.js"></script>
+    <script src="../../js/get-nhk-news.js"></script>
+    <script src="../../js/back-to-top-toggle.js"></script>
 
 </body>
 
