Update calendar style and format

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -179,7 +179,7 @@
     <script src="../../js/change-theme.js"></script>
     <script src="../../js/theme-toggle.js"></script>
     <script src="../../js/sidebar-toggle.js"></script>
-    <script src="../../js/calender-ja.js"></script>
+    <script src="../../js/calendar-ja.js"></script>
     <script src="../../js/get-nhk-news.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
 
