Update Japanese HTML

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -76,9 +76,9 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/gallery.html">Gallery</a></li>
+                                href="../common/gallery.html">ギャラリー</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/projects.html">Projects</a></li>
+                                href="../common/projects.html">プロジェクト</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
