--- a/static/styles.css
+++ b/static/styles.css
@@ -14966,6 +14966,15 @@ body {
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
+body:lang(en) {
+    font-family: 'Roboto', sans-serif;
+}
+
+body:lang(ja) {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+
 body.dark {
     background-color: #333;
     color: #fff;
