--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -139,21 +139,18 @@
                 </div>
 
                 <h2>研究</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nulla nobis quod dicta in quidem
-                    minus dolorem dignissimos provident error necessitatibus suscipit quae tenetur aut, ad adipisci.
-                    Nesciunt, odit fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptas
-                    nihil deleniti porro debitis ea vero exercitationem non minus nemo voluptatum ut iusto eum quasi
-                    saepe, facilis fugiat, culpa vitae.</p>
+                <p>
+                    3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
+                </p>
                 <figure>
                     <p align="center">
                         <img src="../../static/printability_setup.png" alt="printability_setup" width="350"
                             loading="lazy">
 
                     </p>
-                    <figcaption align="center"><strong>Figure 1.</strong> Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit.
-                        Sapiente quisquam, repellat quia itaque rerum eius illo. Consequatur, ea! Aut reprehenderit
-                        dolorum reiciendis nobis ipsum eum ducimus perspiciatis rem illo provident.</figcaption>
+                    <figcaption align="center"><strong>Figure 1.</strong>
+                        印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
+                    </figcaption>
                 </figure>
 
                 <h2>オンラインコース</h2>
