Update links to index.html

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -24,7 +24,7 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="">KORIN</a></h1>
+                    <h1><a href="../../index.html">KORIN</a></h1>
                     <div class="top-bar">
                         <span>Projects</span>
                         <button id="theme-toggler" class="theme-button">
