--- a/static/styles.css
+++ b/static/styles.css
@@ -14963,7 +14963,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #fff;
     color: #333;
-    /* transition: background-color 0.2s ease, color 0.2s ease; */
+    transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 main:lang(en-us) {
