--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -85,7 +85,13 @@
                         <div id="calendar"></div>
                     </div>
                     <hr>
-                    <footer>© 2023 KORIN</footer>
+                    Built with <a href="https://getbootstrap.com/"><i class="fa-brands fa-bootstrap"></i></a>
+                    <a href="https://fontawesome.com/"><i class="fa-solid fa-font-awesome"></i></a>
+                    <a href="https://developer.mozilla.org/ja/docs/Web/JavaScript"><i
+                            class="fa-brands fa-square-js"></i></a>
+                    <footer>
+                        <span style="font-size: smaller;">© 2023 KORIN. All rights reserved.</span>
+                    </footer>
                 </nav>
 
             </aside>
