--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -98,21 +98,48 @@
 
             <main class="col-lg">
 
+                <h2>Basic Calculator (電卓)</h2>
+                <div id="calculator">
+                    <input type="text" id="display" readonly>
+                    <div id="buttons">
+                        <div class="row">
+                            <button class="custom-button calc-button long-button" onclick="clearDisplay()">All
+                                Clear</button>
+                        </div>
+                        <div class="row">
+                            <button class="custom-button calc-button" onclick="appendNumber(7)">7</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(8)">8</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(9)">9</button>
+                            <button class="custom-button calc-button" onclick="chooseOperator('/')">/</button>
+                        </div>
+                        <div class="row">
+                            <button class="custom-button calc-button" onclick="appendNumber(4)">4</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(5)">5</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(6)">6</button>
+                            <button class="custom-button calc-button" onclick="chooseOperator('*')">*</button>
+                        </div>
+                        <div class="row">
+                            <button class="custom-button calc-button" onclick="appendNumber(1)">1</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(2)">2</button>
+                            <button class="custom-button calc-button" onclick="appendNumber(3)">3</button>
+                            <button class="custom-button calc-button" onclick="chooseOperator('-')">-</button>
+                        </div>
+                        <div class="row">
+                            <button class="custom-button calc-button" onclick="appendNumber(0)">0</button>
+                            <button class="custom-button calc-button" onclick="appendNumber('.')">.</button>
+                            <button class="custom-button calc-button" onclick="calculate()">=</button>
+                            <button class="custom-button calc-button" onclick="chooseOperator('+')">+</button>
+                        </div>
+                    </div>
+                </div>
+
                 <h2>Preparing (準備中)</h2>
 
-
-                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
-                    <i class="fas fa-chevron-up"></i>
-                </a>
-
-            </main>
-        </div>
-    </div>
-
-    <script src="../../js/change-theme.js"></script>
-    <script src="../../js/sidebar-toggle.js"></script>
-    <script src="../../js/calendar.js"></script>
-    <script src="../../js/back-to-top-toggle.js"></script>
+                <script src="../../js/calculator.js"></script>
+                <script src="../../js/change-theme.js"></script>
+                <script src="../../js/sidebar-toggle.js"></script>
+                <script src="../../js/calendar.js"></script>
+                <script src="../../js/back-to-top-toggle.js"></script>
 
 </body>
 
