Add back to top button

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -135,6 +135,11 @@
 
                 <h2>Preparing (準備中)</h2>
 
+
+                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
+
                 <script src="../../js/calculator.js"></script>
                 <script src="../../js/change-theme.js"></script>
                 <script src="../../js/sidebar-toggle.js"></script>
