--- a/static/styles.css
+++ b/static/styles.css
@@ -15197,7 +15197,7 @@ img {
 #calculator {
     width: 300px;
     margin: auto;
-    border: 1px solid #ccc;
+    border: 2px solid;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.3);
