Add header icons

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -97,7 +97,7 @@
 
             <main class="col-lg">
 
-                <h2>Preparing (準備中)</h2>
+                <h2><i class="fa-solid fa-mountain"></i> Preparing (準備中)</h2>
 
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
