--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -98,7 +98,8 @@
 
             <main class="col-lg">
 
-                <h2>Basic Calculator (電卓)</h2>
+                <h2><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript" style="text-decoration: none;"><i
+                            class="fa-brands fa-square-js"></a></i> Basic Calculator (電卓)</h2>
                 <div id="calculator">
                     <input type="text" id="display" readonly>
                     <div id="buttons">
@@ -133,7 +134,9 @@
                     </div>
                 </div>
 
-                <h2>Preparing (準備中)</h2>
+                <h2><a href="https://www.python.org/" style="text-decoration: none;"><i class="fa-brands fa-python"></i>
+                    </a>Preparing (準備中)
+                </h2>
 
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
