Update menu links

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -75,7 +75,7 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../../index.html">Homepage</a></li>
+                                href="../../index.html">Homepage</a> / <a href="../ja/index.html">ホームページ</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="projects.html">Projects</a></li>
                     </ul>
