--- a/static/styles.css
+++ b/static/styles.css
@@ -15209,6 +15209,9 @@ img {
     text-align: center;
     margin-bottom: 10px;
     box-sizing: border-box;
+    background-color: #fff;
+    color: #000;
+    border: 2px solid;
 }
 
 #buttons {
