Update gallery picture

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -97,7 +97,12 @@
 
             <main class="col-lg">
 
-                <h2><i class="fa-solid fa-mountain"></i> Preparing (準備中)</h2>
+                <h2><i class="fa-solid fa-mountain"></i> 山登り</h2>
+
+                <figure style="text-align: center;">
+                    <img src="../../static/gallery/nijou.jpeg" alt="Mount Nijō" width="50%">
+                    <figcaption>二上山 (Mount Nijō)</figcaption>
+                </figure>
 
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
