Add dolphin to gallery

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -97,11 +97,21 @@
 
             <main class="col-lg">
 
-                <h2><i class="fa-solid fa-mountain"></i> 山登り</h2>
+                <h2><i class="fa-solid fa-mountain"></i> 山登り (Hiking)</h2>
 
                 <figure style="text-align: center;">
-                    <img src="../../static/gallery/nijou.jpeg" alt="Mount Nijō" width="50%">
+                    <p>
+                        <img src="../../static/gallery/nijou.jpeg" alt="Mount Nijō" width="50%">
+                    </p>
                     <figcaption>二上山 (Mount Nijō)</figcaption>
+                </figure>
+
+                <h2><i class="fa-solid fa-fish-fins"></i> 動物 (Animals)</h2>
+                <figure style="text-align: center;">
+                    <p>
+                        <img src="../../static/gallery/dolphin.png" alt="dolphin" width="50%">
+                    </p>
+                    <figcaption>イルカ (dolphin)</figcaption>
                 </figure>
 
 
