--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -156,6 +156,11 @@
                 <h2><a href="https://www.python.org/" style="text-decoration: none;"><i class="fa-brands fa-python"></i>
                     </a>Preparing (準備中)
                 </h2>
+                <div class="language-plaintext highlighter-rouge">
+                    <div class="highlight">
+                        <pre class="highlight"><code class="command">from __future__ import braces</code></pre>
+                    </div>
+                </div>
 
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
