Update figure format

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -101,7 +101,7 @@
 
                 <figure style="text-align: center;">
                     <p>
-                        <img src="../../static/gallery/nijou.jpeg" alt="Mount Nijō" width="50%">
+                        <img src="../../static/gallery/nijou.png" alt="Mount Nijō" width="50%">
                     </p>
                     <figcaption>二上山 (Mount Nijō)</figcaption>
                 </figure>
